nagios-plugins (1.4.2-6) unreleased; urgency=low

  * NOT YET RELEASED
  * migrate package from CVS to svn
  * add 23_check_axis.dpatch, making the package suiteable to
    debian/-only layout
  * convert to debian/-only layout

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Fri, 20 Jan 2006 19:01:25 +0000

nagios-plugins (1.4.2-5) unstable; urgency=low

  * Sean Finney
    - add documentation to README.Debian about the plugins needing setuid
      root, why we don't install them setuid root by default, and some
      recommended methods for dealing with this (closes: #289879).
    - add documentation to README.Debian about the new package split.
    - config.h_debiandefaults.dpatch now modifies common.h instead of
      config.h.in, because the latter would sometimes cause build hosts
      to spontaneously regenerate the file, overwriting our changes.
      since all the plugins include common.h too... (closes: #336639).
    - include some patches from "F.A.G. Luteijn" <f.a.g.luteijn@knoware.nl>:
      * dhcp.cfg (with notes added by me about needing setuid)
      * disk.cfg (check_all_disks)
      * disk-smb.cfg (seperated check_disk_smb commands)
      * http.cfg (check_https_auth)
      * check_disk_smb: allow checking disk usage via host addresses.
      (closes: #310780).

 -- sean finney <seanius@debian.org>  Mon, 31 Oct 2005 22:35:16 +0100

nagios-plugins (1.4.2-4) unstable; urgency=low

  * Sean Finney:
    - only depend on ntp, not ntp | ntp-simple.  hopefully this should
      allow nagios-plugins to co-exist with openntpd et al.
    - now building against libmysqlclient14-dev.
    - updated Standards-Version to 3.6.2
    - nagios-plugins is now separated into 3 separate packages:
      nagios-plugins, nagios-plugins-basic, and nagios-plugins-standard.
      this should provide folks with a "basic" set of plugins as an
      alternative to those who don't want to bring in so many dependencies