@@ -5,8 +5,10 @@ nagios-plugins (1.4.2-6) unreleased; urgency=low
   * add 23_check_axis.dpatch, making the package suiteable to
     debian/-only layout
   * convert to debian/-only layout
+  * add build-dependency on autotools-dev, add code to automatically
+    link in current config.guess, config.sub
 
- -- Marc Haber <mh+debian-packages@zugschlus.de>  Fri, 20 Jan 2006 19:01:25 +0000
+ -- Marc Haber <mh+debian-packages@zugschlus.de>  Fri, 20 Jan 2006 19:05:15 +0000
 
 nagios-plugins (1.4.2-5) unstable; urgency=low
 
